Fix more css alignment

--- a/app/assets/stylesheets/api/feed.scss
+++ b/app/assets/stylesheets/api/feed.scss
@@ -92,6 +92,7 @@
 
 .link-userpage {
   display: flex;
+  align-items: center;
 
 }
 
